@@ -2,7 +2,7 @@ h1. CHANGELOG
 
 h2. 1.1.3 February 21, 2012
 
-* fix typo for machinist in 'rspec' recipe
+* add 'email_spec' gem to 'rspec' recipe
 * update gem 'cucumber-rails' from 1.2.1 to 1.3.0
 * update gem 'factory_girl_rails' from 1.6.0 to 1.7.0
 * update gem 'devise' from 2.0.0 to 2.0.4
@@ -11,6 +11,7 @@ h2. 1.1.3 February 21, 2012
 * update gem 'rails-backbone' from 0.6.1 to 0.7.0
 * update gem 'compass' from 0.12.alpha.4 to 0.12.rc.1
 * update gem 'bootstrap-sass' from 2.0.0 to 2.0.1
+* fix typo for machinist in 'rspec' recipe
 
 h2. 1.1.2 February 12, 2012
 
